Made code highlights turn on and off depending on if the code window is visible.

--- a/Blog Posts/03.CreateJS Examples/2-1 Minesweeper.html
+++ b/Blog Posts/03.CreateJS Examples/2-1 Minesweeper.html
@@ -1,7 +1,9 @@
-<HTML>
+<!DOCTYPE html>
+<html>
 	<head>
 		<title>Example 2-1: Minesweeper</title>
-		<script src="http://code.createjs.com/createjs-2013.05.14.min.js"></script>
+		<script src="createjs-2013.05.14.min.js"></script>
+		<style>body {margin: 0;}</style>
 	</head>
 	<body>
 		<canvas id="output" width=320 height=320></canvas>
@@ -72,4 +74,4 @@
 			}
 		</script>
 	</body>
-</HTML>
+</html>
