--- a/Blog Posts/03.CreateJS Examples/1-0 Clouds.html
+++ b/Blog Posts/03.CreateJS Examples/1-0 Clouds.html
@@ -1,7 +1,9 @@
-<HTML>
+<!DOCTYPE html>
+<html>
 	<head>
 		<title>Example 1-0: Clouds</title>
-		<script src="http://code.createjs.com/createjs-2013.05.14.min.js"></script>
+		<script src="createjs-2013.05.14.min.js"></script>
+		<style>body {margin: 0;}</style>
 	</head>
 	<body>
 		<canvas id="output" width=300 height=150></canvas>
@@ -44,4 +46,4 @@
 			}
 		</script>
 	</body>
-</HTML>
+</html>
