--- a/Blog Posts/03.CreateJS Examples/1-2 Clouds.html
+++ b/Blog Posts/03.CreateJS Examples/1-2 Clouds.html
@@ -1,7 +1,9 @@
-<HTML>
+<!DOCTYPE html>
+<html>
 	<head>
 		<title>Example 1-2: Clouds</title>
-		<script src="http://code.createjs.com/createjs-2013.05.14.min.js"></script>
+		<script src="createjs-2013.05.14.min.js"></script>
+		<style>body {margin: 0;}</style>
 	</head>
 	<body>
 		<canvas id="output" width=300 height=150></canvas>
@@ -20,16 +22,16 @@
 			//We'll add some scenery to the stage, then add an actor.
 			addLand(backgroundContainer);
 			addCloud(sceneryContainer,  0, 40);
-			addActor(actorContainer, 99, 38);
+			addActor(actorContainer,   99, 38);
+			
+			//CreateJS comes with a "Ticker" object which fires each frame. We'll make it so that we repaint the stage each time it's called, via our stage's "update" function.
+			createjs.Ticker.addEventListener("tick", function paintStage() {
+				stage.update(); });
 			
 			//We'll add in another cloud, at a random height, every 2 seconds.
 			window.setInterval(function addClouds() {
 				addCloud(sceneryContainer, 0, Math.random()*60);
 			}, 2000);
-			
-			//CreateJS comes with a "Ticker" object which fires each frame. We'll make it so that we repaint the stage each time it's called, via our stage's "update" function.
-			createjs.Ticker.addEventListener("tick", function paintStage() {
-				stage.update(); });
 			
 			function addLand(stage) {
 				var land = new createjs.Bitmap("images/land.png");
@@ -55,4 +57,4 @@
 			}
 		</script>
 	</body>
-</HTML>
+</html>
