--- a/Blog Posts/03.CreateJS Examples/2-1 Minesweeper.html
+++ b/Blog Posts/03.CreateJS Examples/2-1 Minesweeper.html
@@ -54,6 +54,7 @@
 				
 				stage.update();
 			});
+			createjs.Ticker.setInterval(1000/50); //Results in a delay of 20 ms/frame for 50fps.
 			
 			
 			function addTile(stage, x, y) {
