Hopefully fixed the cube trains download link.

--- a/cube trains/index.html
+++ b/cube trains/index.html
@@ -70,7 +70,7 @@
 				<input type="number" name="amount" value="2.00" min="2" step="any" oninput="if((parseInt(this.value) < 2 || parseInt(this.value) != parseInt(this.value)) && this.value != '') {this.value='2.00'}" onblur="if((parseInt(this.value) < 2 || parseInt(this.value) != parseInt(this.value))) {this.value='2.00'}">
 				<input type="hidden" name="currency_code" value="CAD">
 				<p class="buttonSubtext" style="margin:3px;">Payment amount, in Canadian Dollars. $2.00 minimum, please. Tips appreciated.</p>
-				<input type="hidden" name="return" value="ddr0.github.io/cube trains/download expansion 1.html">
+				<input type="hidden" name="return" value="http://ddr0.github.io/cube%20trains/download%20expansion%201.html">
 				<input type="hidden" name="button_subtype" value="services">
 				<input type="hidden" name="bn" value="PP-BuyNowBF:btn_buynow_LG.gif:NonHosted">
 				<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
