--- a/side projects/madness.html
+++ b/side projects/madness.html
@@ -26,6 +26,9 @@
 				padding-left: 1ex;
 				padding-right: 1ex;
 			}
+			a:link, a:visited {
+				color: black;
+			}
 		</style>
 	</head>
 	<body>
