Lesson being, test your links before you publish your page.

--- a/side projects/madness.html
+++ b/side projects/madness.html
@@ -40,6 +40,6 @@
 			<tr><td>Roberts</td><td>0</td>
 		</table>
 		<!--<h2>Feb 9, 2014 - Round 1</h2>-->
-		<a style="padding-right: 230px;"href="https://www.facebook.com/photo.php?fbid=10153800445650691">[View Facebook Event]</a>
+		<a style="padding-right: 230px;"href="https://www.facebook.com/events/473877882716756">[View Facebook Event]</a>
 	</body>
 </html>
