Added the McNugget Madness site for reference and/or hilarity's sake. Uses a combination of websockets, manual transcription, and some really questionable JS to display a live counter.
Because it might be important for reproduction later, /etc/nginx/sites-enabled/default:
# You may add here your
# server {
#	...
# }
# statements for each of your virtual hosts to this file

##
# You should look at the following URL's in order to grasp a solid understanding
# of Nginx configuration files in order to fully unleash the power of Nginx.
# http://wiki.nginx.org/Pitfalls
# http://wiki.nginx.org/QuickStart
# http://wiki.nginx.org/Configuration
#
# Generally, you will want to move this file somewhere, and start with a clean
# file but keep this around for reference. Or just disable in sites-enabled.
#
# Please see /usr/share/doc/nginx-doc/examples/ for more detailed examples.
##

server {
	listen 80 default_server;
	listen [::]:80 default_server ipv6only=on;
    #listen 443 ssl;

	root /var/www;
	autoindex on; #Show directory structure. (Turn off for production.)
	index explicit-index.html; #Now files called - have the same effect as index.html.

	# Make site accessible from http://localhost/
	server_name localhost;

	location / {
		# First attempt to serve request as file, then
		# as directory, then fall back to displaying a 404.
		#try_files $uri $uri/ /404.html;
		# Uncomment to enable naxsi on this location
		# include /etc/nginx/naxsi.rules
	}

	#location /doc/ {
	#	alias /usr/share/doc/;
	#	autoindex on;
	#	allow 127.0.0.1;
	#	allow ::1;
	#	deny all;
	#}

	# Only for nginx-naxsi used with nginx-naxsi-ui : process denied requests
	#location /RequestDenied {
	#	proxy_pass http://127.0.0.1:8080;
	#}

	#error_page 404 /404.html;

	# redirect server error pages to the static page /50x.html
	#
	#error_page 500 502 503 504 /50x.html;
	#location = /50x.html {
	#	root /usr/share/nginx/html;
	#}

	# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
	#
	#location

--- a/side projects/mcnugget-madness/dinger.html
+++ b/side projects/mcnugget-madness/dinger.html
@@ -3,21 +3,30 @@
 <html>
 	<head>
 		<meta charset='utf-8' />
+		<title>McNugget Dinger</title>
+		
+		<!-- Try to make double-tap not zoom. Mostly fails. -->
 		<meta name="HandheldFriendly" content="True" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
 		<meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
-		<meta name="viewport" content="initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,width=device-width,user-scalable=no" />
-		<title>McNugget Dinger</title>
+		
+		<script src="/socket.io/socket.io.js:8077"></script>
+		<script src="socket.js"></script>
+		
 		<style>
 			body {
 				background-color: #d80019;
 				text-align: center;
 				margin: 2em;
 				margin-top: 1em;
-				background-image: url('banner.jpg');
+				/*background-image: url('banner.jpg');*/
 				background-repeat: no-repeat;
+				color: white;
+				font-family: sans-serif;
+			}
+			h1 {
+				font-family: Impact, Charcoal, sans-serif;
 			}
 			#nugget {
 				max-width: 100%;
@@ -25,34 +34,58 @@
 			}
 			#undo {
 				position: absolute;
-				right: 0;
-				bottom: 0;
+				right: 1ex;
+				bottom: 1ex;
 			}
 			#stupidityCount {
 				font-size: 200px;
+				color: #faa90f; /*goldenarch, goldenrod is a bit different :( */
+			}
+			#login {
+				position: fixed;
+				left: 1ex;
+				bottom: -1ex;
 			}
 		</style>
+		
+		<script>
+			var round = 1;
+		</script>
 	</head>
 	<body>
 		<h1>Nuggets Eaten</h1>
 		<div>
-			<button id="nugget"><img src="nugget.jpg" alt="+1"></button>
+			<button id="nugget" width="234" height="305"><img src="nugget.jpg" alt="+1" width="231" height="302"></button>
 			<br>
 			<button id="undo">Uncount</button>
 		</div>
-		<div id="stupidityCount">0</div>
+		<strong id="stupidityCount">0</strong>
 		<div id="ding"></div>
+		
 		<script>
-			var count = 0;
-			document.getElementById('nugget').addEventListener('click', function(event) {
+			//Add logged in message at bottom.
+			document.body.innerHTML += "<p id='login'>Logged in as " + (localStorage.name||'nobody. (Your nugget count will not be recorded for posterity.)') + "</p>"
+		</script>
+		
+		<script>
+			//Set callbacks for buttons.
+			document.getElementById('stupidityCount').innerHTML = localStorage[round] = localStorage[round] || 0;
+			
+			var increment = function(event) {
 				event.preventDefault();
-				document.getElementById('stupidityCount').innerHTML = ++count;
+				document.getElementById('stupidityCount').innerHTML = ++localStorage[round];
+				socket.emit('set-nugget-count', {name: localStorage.name, count: localStorage[round]});
 				//document.getElementById('ding').innerHTML = '<audio src="ding.mp3" volume="1" muted="0" autoplay="1" />'
 				//document.getElementById('ding').innerHTML += '<audio src="ding.ogg" volume="1" muted="0" autoplay="1" />'
-			});
+			};
+			
+			document.getElementById('nugget').addEventListener('click', increment);
+			document.getElementById('stupidityCount').addEventListener('click', increment);
+			
 			document.getElementById('undo').addEventListener('click', function(event) {
 				event.preventDefault();
-				document.getElementById('stupidityCount').innerHTML = count = Math.max(count-1, 0);
+				document.getElementById('stupidityCount').innerHTML = localStorage[round] = Math.max(localStorage[round]-1, 0);
+				socket.emit('set-nugget-count', {name: localStorage.name, count: localStorage[round]});
 			});
 		</script>
 	</body>
