--- a/side projects/colour.html
+++ b/side projects/colour.html
@@ -22,6 +22,7 @@
 			}
 			input[type="color"], button {
 				height: 100%;
+				min-height: 50px; /*Hack, seems they default to minimum height on chrome now? O_o*/
 			}
 			
 			#UI {
