--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a href='blog.html'><img alt='' src='images/icons/page.svg'><div>blog</div></a>
       <a href='gallery.html'><img alt='' src='images/icons/work.svg'><div>gallery</div></a>
       <a href='contact.html'><img alt='' src='images/icons/chat2.svg'><div>contact</div></a>
-      <a href='feeds.html'><img alt='' src='images/icons/rss.svg'><div>rss</div></a>
+      <a href='rss.xml'><img alt='' src='images/icons/rss.svg'><div>rss</div></a>
     </div>
     <div id='content-holder'>
       <h1><img alt='blog' src='images/text-blog.png'></h1>
