Made light painter mobile phone chrome dark and stopped it automatically leaving full-screen mode to suppress an annoying fullscreen popup message.

--- a/side projects/colour.html
+++ b/side projects/colour.html
@@ -2,10 +2,11 @@
 	<head> 
 		<meta charset="utf-8">
 		<title>Light Painter's Source</title> 
+		<meta name="theme-color" content="#000000">
 		<style>
 			body {
 				/*height: 3000px;*/
-				font-size: 300%;
+				font-size: 200%;
 				margin: 0;
 				height: 100%;
 				padding-bottom: 250px;
@@ -44,15 +45,15 @@
 			      document.documentElement.webkitRequestFullscreen(Element.ALLOW_KEYBOARD_INPUT);
 			    }
 			  } else {
-			    if (document.exitFullscreen) {
-			      document.exitFullscreen();
-			    } else if (document.msExitFullscreen) {
-			      document.msExitFullscreen();
-			    } else if (document.mozCancelFullScreen) {
-			      document.mozCancelFullScreen();
-			    } else if (document.webkitExitFullscreen) {
-			      document.webkitExitFullscreen();
-			    }
+			  //  if (document.exitFullscreen) {
+			  //    document.exitFullscreen();
+			  //  } else if (document.msExitFullscreen) {
+			  //    document.msExitFullscreen();
+			  //  } else if (document.mozCancelFullScreen) {
+			  //    document.mozCancelFullScreen();
+			  //  } else if (document.webkitExitFullscreen) {
+			  //    document.webkitExitFullscreen();
+			  //  }
 			  }
 			}
 		</script>
