--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <meta charset='utf-8'>
     <title>Contact</title>
     <link href='css/Grey and Blue.css' rel='stylesheet'>
+    <link rel="alternate" type="application/rss+xml" title="RSS feed for ddr0.github.io" href="/rss.xml" />
+    <meta name="theme-color" content="#3377FF">
   </head>
   <body>
     <a href='#content' id='skip-nav'>Skip navigation.</a>
