--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Blog</title>
     <link href='css/Grey and Blue.css' rel='stylesheet'>
     <link href='css/Blog.css' rel='stylesheet'>
+    <link rel="alternate" type="application/rss+xml" title="RSS feed for ddr0.github.io" href="/rss.xml" />
+    <meta name="theme-color" content="#3377FF">
   </head>
   <body>
     <a href='#content' id='skip-nav'>Skip navigation.</a>
