--- a/Blog Posts/07.Wacom for Hearthstone.html
+++ b/Blog Posts/07.Wacom for Hearthstone.html
@@ -1,4 +1,4 @@
-<h2>Fixing Wacom Tablets for Hearthstone in Windows</h2>
+<h2 id="WacomForHearthstone">Fixing Wacom Tablets for Hearthstone in Windows</h2>
 
 <p>As of 2016-10-29, there is some sort of bug with Hearthstone where it will ignore clicks coming from a tablet. A quick search turns up complaints, but no solution:</p>
 
