--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
       <h1><img alt='blog' src='images/text-blog.png'></h1>
       <a name='content'></a>
       <div id='content-pane'>
-        <h2>Fixing Wacom Tablets for Hearthstone in Windows</h2>
+        <h2 id="WacomForHearthstone">Fixing Wacom Tablets for Hearthstone in Windows</h2>
         
         <p>As of 2016-10-29, there is some sort of bug with Hearthstone where it will ignore clicks coming from a tablet. A quick search turns up complaints, but no solution:</p>
         
