Added blog post 8, and some other small tweaks to the blog.

--- a/Blog Posts/05.Calculating a Bounce.html
+++ b/Blog Posts/05.Calculating a Bounce.html
@@ -30,12 +30,12 @@
 
 	<p>Now you can replace the x₁ and n with the variables of your program, and be on your way. For example, in Javascript:
 	<div class="code-container">
-		<code>//Returns vector v mirrored around the normalized vector mir.</code><br>
-		<code>function vReflectIn(v,mir) { </code><br>
-		<code>	return [</code><br>
-		<code>		-v[0] + 2*mir[0]*(v[0]*mir[0]+v[1]*mir[1]),</code><br>
-		<code>		-v[1] + 2*mir[1]*(v[0]*mir[0]+v[1]*mir[1]),</code><br>
-		<code>	]; </code><br>
+		<code>//Returns vector v mirrored around the normalized vector mir.</code>
+		<code>function vReflectIn(v,mir) { </code>
+		<code>	return [</code>
+		<code>		-v[0] + 2*mir[0]*(v[0]*mir[0]+v[1]*mir[1]),</code>
+		<code>		-v[1] + 2*mir[1]*(v[0]*mir[0]+v[1]*mir[1]),</code>
+		<code>	]; </code>
 		<code>}</code>
 	</div>
 </div>
