--- a/Blog Posts/07.Wacom for Hearthstone.html
+++ b/Blog Posts/07.Wacom for Hearthstone.html
@@ -12,8 +12,8 @@
 
 <!-- Code tag on each line because each line gets padded later in the compiling process too. -->
 <div class="code-container">
-	<code>#Map the left mouse button to the left mouse button. This makes Hearthstone, among other</code>
-	<code>#games, "see" it.</code>
+	<code>;Map the left mouse button to the left mouse button. This makes Hearthstone, among other</code>
+	<code>;games, "see" it.</code>
 	<code>#NoEnv  ; Recommended for performance and compatibility with future AutoHotkey releases.</code>
 	<code>SendMode Input  ; Recommended for new scripts due to its superior speed and reliability.</code>
 	<code>SetWorkingDir %A_ScriptDir%  ; Ensures a consistent starting directory.</code>
@@ -21,6 +21,8 @@
 	<code></code>
 	<code>LButton::LButton</code>
 </div>
+<small>Edit: Fixed initial comments.</small>
+<small>Edit: It also fixes Cities: Skylines!</small>
 
 <p>Double-click to run. Hearthstone should now work as expected.</p>
 
