Updated link to CT source, to point to the right branch.

--- a/cube trains/index.html
+++ b/cube trains/index.html
@@ -57,7 +57,7 @@
 			<div style="clear: both;"></div>
 			<!-- <p>All releases, including previous versions, can be found <a href="files/release/"> here</a>.</p> -->
 			<!--<p>Changelog: Updated graphics. Fixed zordering bugs. Multiple glitches fixed. Editor and player added. Added some music and sound effects. Improved mouse controls.</p>-->
-			<p>The <a id="source-download" href="https://github.com/frogatto/frogatto/archive/ct-1.0.0.zip">source</a> code and assets are available from the <a href="https://github.com/frogatto/frogatto">frogatto github project</a>. (See the legal bit at the bottom for exact licence and all that.)</p>
+			<p>The <a id="source-download" href="https://github.com/frogatto/frogatto/archive/ct-1.0.0.zip">source</a> code and assets are available from the <a href="https://github.com/frogatto/frogatto/tree/ct-1.0.0-exp1">frogatto github project</a>. (Note: The module does not need Anura to run. It is comes with its own custom version of the game engine.)</p>
 			
 			<h2>Expansion Pack</h2>
 			<p>Buy the expansion pack and show support for Cube Trains! Get 11 more levels and a water tile for the editor. Absolutely no copy protection or DRM, now or ever.</p>
