Cleanup; removed some stray debugging code from blog & renamed RSS feeds.

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 			<h1><img alt='contact' src='images/text-contact.png'></h1>
 			<a name='content'></a>
 			<div id='content-pane'>
-				You can reach me at robertsdavidddr@gmail.com, on Github as DDR0, or on IRC as DDR on freenode.net.
+				You can reach me at d@ddr0.com, on Github as DDR0, or on Discord as DDR#0001.
 			</div>
 		</div>
 	</body>
