Separated out rss feed into blog and gallery. (Before it was just blog.)

--- a/blog.html
+++ b/blog.html
@@ -5,8 +5,8 @@
 		<title>Blog</title>
 		<link href='css/Grey and Blue.css' rel='stylesheet'>
 		<meta name="theme-color" content="#3377FF">
-		<link href='css/Blog.css' rel='stylesheet'>		
-<link rel="alternate" type="application/rss+xml" title="DDR's Blog" href="/rss.xml" />
+		<link href='css/Blog.css' rel='stylesheet'>
+		<link rel="alternate" type="application/rss+xml" title="DDR's Blog" href="/blog-rss-feed.xml" />
 	</head>
 	<body>
 		<a href='#content' id='skip-nav'>Skip navigation.</a>
