--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
 		<title>Gallery</title>
 		<link href='css/Grey and Blue.css' rel='stylesheet'>
 		<meta name="theme-color" content="#3377FF">
-		
+		<link rel="alternate" type="application/rss+xml" title="DDR's Blog" href="/gallery-rss-feed.xml" />
 	</head>
 	<body>
 		<a href='#content' id='skip-nav'>Skip navigation.</a>
