Gallery: Use HTTPS.

--- a/gallery.html
+++ b/gallery.html
@@ -23,18 +23,18 @@
 				<!-- // FROGATTO /// -->
 				<!-- Oh, wouldn't it be nice to be able to define a height variable here… but can't do that. -->
 				<div style='min-height:300px;'>
-					<a href="http://www.frogatto.com/"><img class="cover right" src="images/gallery/frogatto forest-crossroads (small).png"></a>
+					<a href="https://www.frogatto.com/"><img class="cover right" src="images/gallery/frogatto forest-crossroads (small).png"></a>
 					<h2>Frogatto &&nbsp;Friends</h2>
-					<p>This is a beautiful 2D platformer which I have been working on since 2009. You can buy it on <a href="http://www.frogatto.com/">Frogatto.com</a> for $9.99. <a href="http://en.wikipedia.org/wiki/Digital_rights_management">DRM</a>-free. 10+ hours of gameplay. No internet connection required. Hand-pixelled artwork. Family-friendly. Source available on <a href="https://github.com/frogatto/frogatto/">github</a>.</p>
+					<p>This is a beautiful 2D platformer which I have been working on since 2009. You can buy it on <a href="https://www.frogatto.com/">Frogatto.com</a> for $9.99. <a href="https://en.wikipedia.org/wiki/Digital_rights_management">DRM</a>-free. 10+ hours of gameplay. No internet connection required. Hand-pixelled artwork. Family-friendly. Source available on <a href="https://github.com/frogatto/frogatto/">github</a>.</p>
 				</div>
 				<hr>
 				<!-- // CANDY CRUNCH /// -->
-				<script src='http://code.jquery.com/jquery-2.0.0.min.js'></script>
+				<script src='https://code.jquery.com/jquery-2.0.0.min.js'></script>
 				<div style='min-height:322px;'>
 					<!-- Measured width/height is 641, 643. Half that is 320, 321. We have two margins, so half that is 160/161. Margin right is +2ex. -->
 					<iFrame class='cover left' height='643' id='candy-crush' src='Candy Crunch/minimal.html' style='-webkit-transform:scale(0.5,0.5); transform:scale(0.5,0.5); margin-left:-161px; margin-right:-150px; margin-top:-161px; margin-bottom:-161px; max-width:200%;' width='641'></iFrame>
 					<h2>Candy Crunch</h2>
-					<p>Over the course of two weeks in the spring of 2013, I was commissioned by a company called <a href="http://ayogo.com">Ayogo</a> to program a match-3 game. Candy Crunch was the outcome. Match more than three candies together to score a bonus. There is also a <a href="Candy Crunch/index.html">double-sized version</a>. You can <button onclick="$('#candy-crush')[0].contentWindow.location.reload()">restart</button> the game.</p>
+					<p>Over the course of two weeks in the spring of 2013, I was commissioned by a company called <a href="https://ayogo.com">Ayogo</a> to program a match-3 game. Candy Crunch was the outcome. Match more than three candies together to score a bonus. There is also a <a href="Candy Crunch/index.html">double-sized version</a>. You can <button onclick="$('#candy-crush')[0].contentWindow.location.reload()">restart</button> the game.</p>
 				</div>
 				<hr>
 				<!-- // CUBE TRAINS /// -->
@@ -48,12 +48,12 @@
 				<div style='min-height:300px;'>
 					<a href="https://github.com/DDR0/open_pixel_platformer"><img class="cover left" src="images/gallery/open platformer project jungle test level mod.png"></a>
 					<h2>Open Pixel Platformer</h2>
-					<p>This project aims to make a free, open-source platformer for coders and artists to use as a resource. I lead the programming side of the project. Code on <a href="https://github.com/DDR0/open_pixel_platformer">Github</a>. Discussion is at a <a href="http://www.pixeljoint.com/forum/forum_topics.asp?FID=23">sub-forum on PixelJoint</a>.</p>
+					<p>This project aims to make a free, open-source platformer for coders and artists to use as a resource. I lead the programming side of the project. Code on <a href="https://github.com/DDR0/open_pixel_platformer">Github</a>. Discussion is at a <a href="https://www.pixeljoint.com/forum/forum_topics.asp?FID=23">sub-forum on PixelJoint</a>.</p>
 				</div>
 				<hr>
 				<!-- // ComeFrom 2 /// -->
 				<div style='min-height:296px;'>
-					<a href="http://ddr0.github.io/side projects/cfl"><img class="cover right" style="width:126.5px" src="images/gallery/cfl.png" alt="
+					<a href="https://ddr0.github.io/side projects/cfl"><img class="cover right" style="width:126.5px" src="images/gallery/cfl.png" alt="
 					program:
 					10 #0
 					20 comefrom 120
@@ -74,7 +74,7 @@
 					[1,2,2,2]
 					"></a>
 					<h2>ComeFrom 2</h2>
-					<p>ComeFrom 2 is an esoteric language which explores the implications of only being able to COMEFROM lines, not GOTO them. Since no stupid idea is any use if it's not accessible, an <a href="http://ddr0.github.io/side projects/cfl">online IDE</a> is available. Be sure to run the 'Counting Up to Ten' program! For a more detailed explanation and introduction, see the <a href="http://esolangs.org/wiki/ComeFrom2">esolangs.org page</a>.</p>
+					<p>ComeFrom 2 is an esoteric language which explores the implications of only being able to COMEFROM lines, not GOTO them. Since no stupid idea is any use if it's not accessible, an <a href="https://ddr0.github.io/side projects/cfl">online IDE</a> is available. Be sure to run the 'Counting Up to Ten' program! For a more detailed explanation and introduction, see the <a href="https://esolangs.org/wiki/ComeFrom2">esolangs.org page</a>.</p>
 					<p>ComeFrom's real coup de grâce, however, is the <em>conditional</em> comefrom. By examining the top variable on the stack, we eliminate the need for if-based conditionals and loops entirely.</p>
 				</div>
 				<hr>
@@ -87,16 +87,16 @@
 				<hr>
 				<!-- // CANVASGAME /// -->
 				<div style='min-height:262.5px;'>
-					<a href="http://ddr0.github.io/side%20projects/canvasgame.html"><img class="cover right" style="width:176.5px;" src="images/gallery/html game.gif"></a>
+					<a href="https://ddr0.github.io/side%20projects/canvasgame.html"><img class="cover right" style="width:176.5px;" src="images/gallery/html game.gif"></a>
 					<h2>canvasgame</h2>
-					<p><a href="http://ddr0.github.io/side%20projects/canvasgame.html">canvasgame</a> is a demo two-player game, written in Javascript. Controls: a/e to move and o to fire missile for player 1, numpad 4/6 to move and 5 to fire area bomb for player 2. I made the game in one day to learn.</p>
+					<p><a href="https://ddr0.github.io/side%20projects/canvasgame.html">canvasgame</a> is a demo two-player game, written in Javascript. Controls: a/e to move and o to fire missile for player 1, numpad 4/6 to move and 5 to fire area bomb for player 2. I made the game in one day to learn.</p>
 				</div>
 				<hr>
 				<p>
 					Minor Links:
 					<ol>
-						<li>money calculator: <a href="http://ddr0.github.io/side%20projects/%24%E2%8C%9A.html">http://ddr0.github.io/side projects/$⌚.html</a></li>
-						<li>light painting tool: <a href="http://ddr0.github.io/side%20projects/colour.html">http://ddr0.github.io/side projects/colour.html</a></li>
+						<li>money calculator: <a href="https://ddr0.github.io/side%20projects/%24%E2%8C%9A.html">https://ddr0.github.io/side projects/$⌚.html</a></li>
+						<li>light painting tool: <a href="https://ddr0.github.io/side%20projects/colour.html">https://ddr0.github.io/side projects/colour.html</a></li>
 					</ol>
 				</p>
 				<p>Questions? Comments? I like <a href="contact.html">hearing</a> from people.</p>
@@ -109,8 +109,8 @@
 				<img src='images/easter-egg pull.svg'>
 			</a>
 			<canvas height='0' id='background-city' width='0'></canvas>
-			<script src='http://code.createjs.com/preloadjs-0.3.0.min.js'></script>
 			<script src='background town/setup.js'></script>
+			<script src='https://code.createjs.com/preloadjs-0.3.0.min.js'></script>
 		</footer>
 	</body>
 </html>
