Port background-town to makefile build system.

--- a/gallery.html
+++ b/gallery.html
@@ -109,8 +109,8 @@
 				<img src='images/easter-egg pull.svg'>
 			</a>
 			<canvas height='0' id='background-city' width='0'></canvas>
-			<script src='background town/setup.js'></script>
 			<script src='https://code.createjs.com/preloadjs-0.3.0.min.js'></script>
+			<script src='background-town/setup.js'></script>
 		</footer>
 	</body>
 </html>
