Upgraded most of the external http links in the blog to https.

--- a/Blog Posts/05.Calculating a Bounce.html
+++ b/Blog Posts/05.Calculating a Bounce.html
@@ -3,7 +3,7 @@
 	<p>Problem: Given a ball and a curved wall, how do we calculate the angle of the bounce of the ball? Assuming we have the normal of the wall at the bounce location, our problem becomes:</p>
 	<p>Problem: Given two vectors, x₁ and n, how do we mirror vector x₁ around vector n to get x′? (x₁ is the ball velocity and n is the normal of the wall.)</p>
 
-	<p>Solution: Implement <a href="http://mathworld.wolfram.com/Reflection.html">http://mathworld.wolfram.com/Reflection.html</a> (The first picture is accurate to the situation.)</p>
+	<p>Solution: Implement <a href="https://mathworld.wolfram.com/Reflection.html">https://mathworld.wolfram.com/Reflection.html</a> (The first picture is accurate to the situation.)</p>
 
 	<p>As written: x₁′ = -x₁ + 2x₀ + 2n̂[(x₁-x₀)·n̂]</p>
 
