--- a/Blog Posts/03.CreateJS Examples/1-1 Clouds.html
+++ b/Blog Posts/03.CreateJS Examples/1-1 Clouds.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset='utf-8'>
 		<title>Example 1-1: Clouds</title>
 		<script src="createjs-2013.05.14.min.js"></script>
 		<style>body {margin: 0;}</style>
