--- a/Blog Posts/03.CreateJS Examples/2-1 Minesweeper.html
+++ b/Blog Posts/03.CreateJS Examples/2-1 Minesweeper.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset='utf-8'>
 		<title>Example 2-1: Minesweeper</title>
 		<script src="createjs-2013.05.14.min.js"></script>
 		<style>body {margin: 0;}</style>
