Moved less compiling to Makefile; deleted compile.sh.
	- Renamed CSS files to be lower-case, which is more consistent with
	  everything else in the project.

--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
 		<title>Blog</title>
 		<link href='css/Grey and Blue.css' rel='stylesheet'>
 		<meta name="theme-color" content="#3377FF">
-		<link href='css/Blog.css' rel='stylesheet'>
+		<link href='css/blog.css' rel='stylesheet'>
 		<link rel="alternate" type="application/rss+xml" title="DDR's Blog" href="/blog-rss-feed.xml" />
 	</head>
 	<body>
