--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
 		<title>Gallery</title>
 		<link href='css/Grey and Blue.css' rel='stylesheet'>
 		<meta name="theme-color" content="#3377FF">
+		<link href='css/gallery.css' rel='stylesheet'>
 		<link rel="alternate" type="application/rss+xml" title="DDR's Blog" href="/gallery-rss-feed.xml" />
 	</head>
 	<body>
