--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<title>Blog</title>
-		<link href='css/Grey and Blue.css' rel='stylesheet'>
+		<link href='css/grey-and-blue.css' rel='stylesheet'>
 		<meta name="theme-color" content="#3377FF">
 		<link href='css/blog.css' rel='stylesheet'>
 		<link rel="alternate" type="application/rss+xml" title="DDR's Blog" href="/blog-rss-feed.xml" />
