--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<title>Contact</title>
-		<link href='css/Grey and Blue.css' rel='stylesheet'>
+		<link href='css/grey-and-blue.css' rel='stylesheet'>
 		<meta name="theme-color" content="#3377FF">
 		
 	</head>
